kubernetes/deployement_login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: zafoutni/plannifrepas:feat-1.0.8
        ports:
          - containerPort: 5000
