kubernetes/deployement_random.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-deployment
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: random
  replicas: 1
  template:
    metadata:
      labels:
        app: random
    spec:
      containers:
      - name: random
        image: zafoutni/plannifrepas:feat-700
        ports:
          - containerPort: 5000
