kubernetes/deployement_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: recette
  namespace: ingress-nginx
spec:
  ports:
  - port: 3306
  selector:
    app: recette
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recette
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: recette

  template:
    metadata:
      labels:
        app: recette
    spec:
      containers:
      - image: zafoutni/database:1.0.1
        name: recette
        ports:
        - containerPort: 3306
          name: recette
        volumeMounts:
          - mountPath: "/mnt/azure"
            name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: azure-managed-disk
