kubernetes/service_login.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ingress-nginx
spec:
  ports:
  - port: 5000
    targetPort: 5000
   
  selector:
    app: flask
