kubernetes/service_random.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-service
  namespace: ingress-nginx
spec:
  ports:
  - port: 5001
    targetPort: 5000
   
  selector:
    app: random
