kubernetes/ingress_https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-nginx
  annotations:
  #   kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: www.vitfee.fr
      http:
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
  
                  
  tls:
  - hosts:
    - www.vitfee.fr
    secretName: resto2-novation-menu-com-tls
